# polyarb

./: .env.example  .gitignore  CLAUDE.md  __init__.py  __main__.py  main.py  pyproject.toml
client/: __init__.py  polymarket.py
data/: __init__.py  feeds.py
markets/: __init__.py  discovery.py
tests/: __init__.py  test_market_rebalancing.py
trading/: __init__.py  paper_trader.py
trading/strategies/: __init__.py  base.py  btc_updown.py  market_rebalancing.py  simple.py
utils/: __init__.py  config.py  logging.py  monitoring.py
