[project]
name = "polyarb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.28.1",
  "orjson>=3.11.5",
  "py-clob-client>=0.34.0",
  "requests>=2.32.5",
  "sentry-sdk>=2.48.0",
  "structlog>=25.5.0",
]

[dependency-groups]
dev = [
  "ruff>=0.14.10",
  "mypy>=1.8.0",
  "types-requests>=2.32.4.20250913",
  "pytest>=9.0.2",
  "pytest-xdist>=3.8.0",
  "pytest-asyncio>=1.3.0",
  "hypothesis>=6.148.7",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "S",   # flake8-bandit: Checks for hardcoded secrets and unsafe code
  "SIM", # flake8-simplify: Suggests cleaner logic (essential for complex algo-trading logic)
  "RUF", # Ruff-specific rules: Catches mutable default args, etc.
]
ignore = [
  "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
show_error_codes = true
explicit_package_bases = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["py_clob_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--verbose",
  "-n=auto",          # parallel execution with pytest-xdist
]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "slow: Slow-running tests",
  "trading: Trading strategy tests",
]
asyncio_mode = "auto"

[tool.hypothesis]
max_examples = 100
deadline = 1000  # 1 second per test case
suppress_health_check = ["too_slow"]
phases = ["explicit", "reuse", "generate", "target", "shrink", "explain"]

[project.scripts]
start = "python main.py"
test = "pytest"
test-fast = "pytest -n auto --maxfail=1"
